<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>


    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <string name="category_quantity">Quantity</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Name</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_phone">Phone</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Qtty</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_name">Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_phone">Phone</string>

    <!-- Units for weight of the pet (pages) [CHAR LIMIT=5] -->
    <string name="unit_book_size">pg</string>

    <!-- Label for dropdown menu option if the book's gender is non fiction [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the book's gender is non fiction [CHAR LIMIT=20] -->
    <string name="gender_nonfiction">Non Fiction</string>

    <!-- Label for dropdown menu option if the book is fiction [CHAR LIMIT=20] -->
    <string name="gender_fiction">Fiction</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_price_empty">Price should be > 0 - Error with saving book</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_invalid">Fields must have data - Error with saving book</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_quantity_invalid">Quantity should be > than 0 - Error with saving book</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_price_invalid">Price should be > than 0 - Error with saving book</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="sale_button">Sale</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="buy_button">Buy 10 units</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="order_button">Call Supplier</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>


</resources>
