<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_price"
                    style="@style/CategoryStyle" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_book_price"
                    android:hint="@string/hint_book_price"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_quantity"
                    style="@style/CategoryStyle" />
                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="-"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/edit_book_quantity"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:textColor="@android:color/black"
                    style="@style/EditorFieldStyle"/>


                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>


            <!-- Quantity field -->

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_book_supplier_name"
                android:hint="@string/hint_book_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/edit_book_supplier_phone"
                android:hint="@string/hint_book_supplier_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_gender"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order_button"
        android:textColor="@color/colorPrimary" />
    <!-- Measurement category -->

</LinearLayout>
